*** 20010727_1 by leeh
- finished off the NO_HACK_OPS code


*** 20010726_2 by leeh
- added #define HIDE_ERROR_MESSAGES, as when we receive an error from a 
  server, theyll sometimes send their IP along with it..


*** 20010726_1 by leeh
- backport from -7
  if someone squits *us*, use cptr->name, not cptr->host


*** 20010722_2 by db
- Don't show ip's on auto conns



*** 20010722_1 by db
*sigh*
1) NO_HACK_OPS is broken atm, all servers in the network have to
   run this, or servers have to send deops, else you get desyncs.
   I'll look at this some more later.
2) Don't allow opers to gain ops on splits ever (for now, other networks
   might wish to allow this) But allow opers to join channels on splits.



*** 20010721_2 by leeh
- disable IP connects if hide servers ips is defined.. 

  we should *not* need to be protecting people from their own opers..
  ergo: this sucks.


*** 20010721_1 by jdc
- src/s_bsd.c: connect_server(): "Host x.x.x.x is not enabled" message
  changed to use aconf->name not aconf->host; "Host" also changed to
  "Server".



*** 20010718_1 by bill

- fixed small oopsie in setting chptr->juped


*** 20010717_8 by lusky
- fixed crypt.h check


*** 20010717_7 by lusky
- check for crypt.h


*** 20010717_6 by bill

 - more warnings being fixed


*** 20010717_5 by lusky
- more warning fixes


*** 20010717_4 by lusky
- fix a warning fix


*** 20010717_3 by lusky
- fixed more warnings


*** 20010717_2 by bill

 - fixed pointless warnings in zlib from showing up


*** 20010717_1 by lusky
massive cleanup of gcc warnings


*** 20010716_3 by leeh
- dont show IPs in stats P either..


*** 20010716_2 by leeh
- this should be extended to ltrace/stats L.. 


*** 20010716_1 by leeh
- dont show ips for servers we're connecting to, or handshaking with
  (reported by cbehrens)


*** 20010715_1 by leeh
- HIDE_SERVERS_IP -> HIDE_SERVERS_IPS
- in get_client_name()

  #ifdef HIDE_SERVERS_IPS
    if(IsServer(client))
      return *MASKED_IP*
  #endif
