@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.105 2001/07/22 21:41:04 db Exp $
+ * $Id: config.h.dist,v 1.106 2001/07/26 16:14:22 leeh Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -710,7 +710,10 @@
  */
 
 /* If this is defined, hack ops is simply not allowed at all
- * 
+ * This needs to be network wide to take effect, else you will get desynchs
+ * on opless channels.  This will have the side effect of preventing users
+ * getting ops themselves via splits, you will probably need some form of
+ * services in conjunction with this.   
  */
 #undef NO_HACK_OPS
 
